# gps_frames

./: .gitignore  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  example.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  versions.json
.github/workflows/: codeql-analysis.yml  docs.yml  python-package.yml  python-publish.yml
case_study/: index.html
dev-fix-badge-on-pypi/: 404.html  index.html  sitemap.xml
dev-fix-badge-on-pypi/case_study/: index.html
dev-fix-badge-on-pypi/example_walkthrough/: index.html
dev-fix-docs/: 404.html  index.html  objects.inv  sitemap.xml
dev-fix-docs/case_study/: index.html
dev-fix-test-badge-and-docs/: 404.html  index.html  sitemap.xml
docs/: basis.html  case_study.md  example_walkthrough.md  index.html  index.md  parameters.html  paths.html  position.html  rotations.html  transforms.html  vectors.html  velocity.html
docs/gps_frames/: basis.html  (+8 more)
examples/: case_study_satellite_tracking.py  example.py
gps_frames/: __init__.py  basis.py  geoid_data_1deg.npz  parameters.py  paths.py  position.py  rotations.py  transforms.py  vectors.py  velocity.py
latest/: 404.html  index.html  sitemap.xml
tests/: conftest.py  test_basis.py  test_case_study.py  test_example_walkthrough.py  test_framelib.py  test_init.py  test_param.py  test_param_extended.py  test_paths.py  test_pos.py  test_rotations.py  test_rotations_extended.py  test_time.py  test_trans.py  test_trans_extended.py  test_vec.py  test_vectors_extended.py  test_vel.py  test_velocity.py
v3.0.0/: 404.html  index.html  sitemap.xml
(+71 files in other folders)
